--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" style="height: 100vh"></div>
+    <script src="https://player.twitch.tv/js/embed/v1.js"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
